fix cache
